--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .DS_Store
 src/main/resources/application.properties
 src/main/resources/application.properties
+backend-api/target/
+backend-api/src/main/resources/application.properties
