Backend API successfully runs locally with Neon DB connection

--- a/backend-api/src/main/resources/application.properties
+++ b/backend-api/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+cat > src/main/resources/application.properties <<'EOF'
 spring.application.name=glamconnect
+
+# --- PostgreSQL / Neon ---
+spring.datasource.url=jdbc:postgresql://ep-ancient-sunset-ah0brwlx-pooler.c-3.us-east-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_MmgsAr5Ej7iX&sslmode=require
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# --- JPA/Hibernate ---
+spring.jpa.hibernate.ddl-auto=update
+
+# --- SQL logging (optional) ---
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+EOF
