--- a/backend-api/src/main/resources/application.properties
+++ b/backend-api/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-cat > src/main/resources/application.properties <<'EOF'
 spring.application.name=glamconnect
 
 # --- PostgreSQL / Neon ---
@@ -8,8 +7,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # --- JPA/Hibernate ---
 spring.jpa.hibernate.ddl-auto=update
 
-# --- SQL logging (optional) ---
+# --- SQL logging  ---
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
-EOF
